[package]
name = "dining_buddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
redis = { version = "0.22.1", features = ["tokio-comp", "r2d2"] }
r2d2 = "0.8.9"
actix-cors = "0.6.0-beta.8"
actix-governor = "0.3.0-beta.1"
dotenv = "0.15.0"
env_logger = "0.9.0"
clokwerk = "0.4.0-rc1"
chrono = "0.4.22"